completed user changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
         <button mat-icon-button (click)="toggleSidenav()"><mat-icon>menu</mat-icon></button>
         <h1 class="example-app-name">PreferLearn Master</h1>
         <span class="example-spacer"></span>
-  
+          <p style="margin-top: 10px;">{{username}}</p>
           <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
             <mat-icon style="font-size: 25px;">account_circle</mat-icon>
           </button>
