--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -130,7 +130,7 @@
                               </a>
                             </li>
                             <li class="nav-item" *ngIf="userRole === 'admin'">
-                              <a routerLink="/lsidentifertestssd/" routerLinkActive="active" class="nav-link text-white">
+                              <a routerLink="/insert/resources/" routerLinkActive="active" class="nav-link text-white">
                                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#tools"/></svg>
                                 Insert Data
                               </a>
