--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-bottom: 6%;">
+<div class="container-fluid" style="margin-bottom: 2px;">
     <div class="row">
         <div class="col-md-4">
             <div class="card" style="background-color: #90EE90;padding-bottom: 40px;">
@@ -28,6 +28,10 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="btn">
+    <a class="mybtn" href="#">Export Ratings.csv</a>
 </div>
 
 <ngx-charts-bar-vertical
