--- a/src/app/components/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.scss
@@ -28,3 +28,27 @@
     text-decoration: none;
     margin-left: 10px;
 }
+
+
+.btn{
+    margin: 50px;
+    text-align: center;
+  }
+  
+  .mybtn{
+          border-radius:3px;
+          text-decoration:none;
+          font-family:sans-serif;
+          font-size:20px;
+          padding: 10px 20px;
+          background-color:#00ad25;
+          color:#fff;
+          transition-delay:.2s;
+          transition:.3s;
+          font-variant-caps:all-small-caps;
+          box-shadow:4px 3px 11px 0 #00ad25;
+          }
+  .mybtn:hover{
+          background-color:#009420;
+          box-shadow:4px 3px 11px 0 #005a13;
+          }
