--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,27 @@
-<p>profile works!</p>
+<!-- <div>
+	<div class="card">
+		<img src="../../../assets/logo.png">
+		<div class="card__content"> -->
+			<!-- <div class="card__label">Brand</div>
+			<h2><a href="https://konrad.design" class="card__link" target="_blank">Name</a></h2>
+			<p>Features</p>
+			<p>SKU</p> -->
+      <!-- <p><span class="fw7">$29.990</span> / unit</p> -->
+			<!-- <div class="card__cta-container">
+				<button class="card__cta">Export Rates</button>
+			</div>
+		</div>
+	</div>
+</div> -->
+
+<div class="container">
+    <div class="content">
+      <a href="https://unsplash.com/photos/HkTMcmlMOUQ" target="_blank">
+        <div class="content-overlay"></div>
+        <img class="content-image" src="../../../assets/logo.png">
+        <div class="content-details">
+          <h3 class="content-title">Export Rates<i class="fas fa-arrow-right arrow"></i></h3>
+        </div>
+      </a>
+    </div>
+  </div>
