--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,6 +91,7 @@
                             <!-- <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg> -->
                             <!-- <span class="fs-4">PreferLearn Master</span>
                           </a> -->
+                          <img src="../assets/logo.png">
                           <hr>
                           <ul class="nav nav-pills flex-column mb-auto">
                             <li class="nav-item" *ngIf="userRole === 'user'">
@@ -102,7 +103,7 @@
                             <li class="nav-item" *ngIf="userRole === 'user'">
                               <a routerLink="/recommendations/" routerLinkActive="active" class="nav-link text-white" aria-current="page">
                                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
-                                Recommendations
+                                Personalized Resources
                               </a>
                             </li>
                             <li class="nav-item" *ngIf="userRole === 'user'">
@@ -118,17 +119,17 @@
                               </a>
                             </li>
                             <li class="nav-item" *ngIf="userRole === 'admin'">
-                              <a routerLink="/lsidentifertests/" routerLinkActive="active" class="nav-link text-white">
+                              <a routerLink="/export/" routerLinkActive="active" class="nav-link text-white">
                                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"/></svg>
-                                Train Model
+                                Export
                               </a>
                             </li>
-                            <li class="nav-item" *ngIf="userRole === 'user'">
+                            <!-- <li class="nav-item" *ngIf="userRole === 'user'">
                               <a routerLink="/profile/" routerLinkActive="active" class="nav-link text-white">
                                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
                                 Profile
                               </a>
-                            </li>
+                            </li> -->
                             <li class="nav-item" *ngIf="userRole === 'admin'">
                               <a routerLink="/insert/resources/" routerLinkActive="active" class="nav-link text-white">
                                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#tools"/></svg>
