--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -99,15 +99,19 @@
 </ngx-spinner>
 <p-toast></p-toast>
 <div class="card">
+  <p-messages [(value)]="msgs1" [enableService]="false"></p-messages>
+
   <p-dataView #dv [value]="resources" [paginator]="true" [rows]="9" filterBy="name"
       [sortField]="sortField" [sortOrder]="sortOrder" layout="grid">
       <ng-template pTemplate="header">
           <div class="flex md:flex-row md:justify-content-between">
-              <p-dropdown [options]="sortOptions"  placeholder="Sort By Price"  styleClass="mb-2 md:mb-0"></p-dropdown>
-              <span class="p-input-icon-left mb-2 md:mb-0">
+              <p-dropdown [options]="typeOptions"  placeholder="Search by Type"  styleClass="mb-2 md:mb-0" (onChange)="onTypeChange($event)"></p-dropdown>
+              <p-dropdown [options]="fieldOptions"  placeholder="Search by Field"  styleClass="mb-2 md:mb-0" (onChange)="onFieldChange($event)"></p-dropdown>
+              <!-- <button pButton pRipple [disabled]="enableBtn" type="button" label="Search"  styleClass="p-button-sm" (onclick)="search()"></button> -->
+              <!-- <span class="p-input-icon-left mb-2 md:mb-0">
                   <i class="pi pi-search"></i>
                   <input type="search" pInputText placeholder="Search by Name" >
-              </span>
+              </span> -->
               <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
           </div>
       </ng-template>
