--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="btn">
-    <a class="mybtn" href="#">Export Ratings.csv</a>
+    <a class="mybtn" (click)="export()">Export Ratings.csv</a>
 </div>
 
 <ngx-charts-bar-vertical
