--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -124,12 +124,12 @@
                                 Export
                               </a>
                             </li>
-                            <!-- <li class="nav-item" *ngIf="userRole === 'user'">
-                              <a routerLink="/profile/" routerLinkActive="active" class="nav-link text-white">
+                            <li class="nav-item" *ngIf="userRole === 'user'">
+                              <a routerLink="/my_fav/" routerLinkActive="active" class="nav-link text-white">
                                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                                Profile
+                                My Favourite
                               </a>
-                            </li> -->
+                            </li>
                             <li class="nav-item" *ngIf="userRole === 'admin'">
                               <a routerLink="/insert/resources/" routerLinkActive="active" class="nav-link text-white">
                                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#tools"/></svg>
