--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -14,14 +14,73 @@
 	</div>
 </div> -->
 
-<div class="container">
-    <div class="content">
-      <a href="https://unsplash.com/photos/HkTMcmlMOUQ" target="_blank">
-        <div class="content-overlay"></div>
-        <img class="content-image" src="../../../assets/logo.png">
-        <div class="content-details">
-          <h3 class="content-title">Export Rates<i class="fas fa-arrow-right arrow"></i></h3>
-        </div>
-      </a>
-    </div>
-  </div>
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
+<p-toast></p-toast>
+<div class="card">
+  <p-messages [(value)]="msgs1" [enableService]="false"></p-messages>
+
+  <p-dataView #dv [value]="resources" [paginator]="true" [rows]="9" filterBy="name"
+      [sortField]="sortField" [sortOrder]="sortOrder" layout="grid">
+      <!-- <ng-template pTemplate="header">
+          <div class="flex md:flex-row md:justify-content-between"> -->
+              <p-dropdown [options]="typeOptions"  placeholder="Search by Type"  styleClass="mb-2 md:mb-0" (onChange)="onTypeChange($event)"></p-dropdown>
+              <p-dropdown [options]="fieldOptions"  placeholder="Search by Field"  styleClass="mb-2 md:mb-0" (onChange)="onFieldChange($event)"></p-dropdown>
+              <!-- <button pButton pRipple [disabled]="enableBtn" type="button" label="Search"  styleClass="p-button-sm" (onclick)="search()"></button> -->
+              <!-- <span class="p-input-icon-left mb-2 md:mb-0">
+                  <i class="pi pi-search"></i>
+                  <input type="search" pInputText placeholder="Search by Name" >
+              </span> -->
+              <!-- <p-dataViewLayoutOptions></p-dataViewLayoutOptions> -->
+          <!-- </div>
+      </ng-template> -->
+      <ng-template let-product pTemplate="listItem">
+          <div class="p-col-12">
+              <div class="product-list-item">
+                  <div class="product-list-detail">
+                      <div class="product-name" style="margin-bottom: 15px;">{{product.title}}</div>
+                      <img [src]="product.image" alt="Resource Image" style="height: 200px;width: 200px;" class="bd-placeholder-img card-img-top">
+                      <div class="product-description" style="margin-top: 15px;">{{ product.desc | slice:0:250}}{{ product.desc.length > 150 ? '...' : '' }}</div>
+                      <p-rating  [stars]="10"  (onRate)="resRatings($event, product.res_id)" (onCancel)="handleOnCancel(product.res_id)"></p-rating>
+                      <i class="pi pi-tag product-category-icon"></i><span class="product-category">{{product.type}}</span>
+                  </div>
+                  <div class="product-grid-item-bottom" style="justify-content: center;">
+                    <div style="justify-content: center; margin-top: 10px;">
+                        <a href="{{product.link}}">show</a>
+                    </div> 
+                  </div>
+              </div>
+          </div>
+      </ng-template>
+      <ng-template let-product pTemplate="gridItem">
+          <div class="md:col-3">
+              <div class="product-grid-item card">
+                  <div class="product-grid-item-top">
+                      <div>
+                          <i class="pi pi-tag product-category-icon"></i>
+                          <span class="product-category">{{product.field}}</span>
+                      </div>
+                      <span [class]="'product-badge status-' + product.type.toLowerCase()">{{product.type}}</span>
+                  </div>
+                  <div class="product-grid-item-content">
+                      <div class="product-name">{{ product.title | slice:0:25}}{{ product.title.length > 150 ? '...' : '' }}</div>
+                      <img [src]="product.image" alt="Resource Image" style="height: 200px;width: 200px;" class="bd-placeholder-img card-img-top">
+                      <div class="product-description">{{ product.desc | slice:0:150}}{{ product.desc.length > 150 ? '...' : '' }}</div>
+                      <p-rating  [stars]="10" [(ngModel)]="product.rating" (onRate)="resRatings($event,product.res_id)" (onCancel)="handleOnCancel(product.res_id)"></p-rating>
+                  </div>
+                  <div class="product-grid-item-bottom" style="justify-content: center;">
+                    <div style="justify-content: center;margin-top: 10px;">
+                      <a href="{{product.link}}">show</a>
+                    </div> 
+                  </div>
+              </div>
+          </div>
+      </ng-template>
+  </p-dataView>
+</div>
