--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -1,219 +1,129 @@
-// *,*:before,*:after {
-// 	box-sizing: border-box;
-// }
-
-// body {
-// 	height: 100vh;
-// 	display: flex;
-// 	align-items: center;
-// 	justify-content: center;
-//   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-// }
-
-// //
-
-// body {
-// 	background-color: #eee;
-// }
-
-// img {
-// 	display: block;
-// 	max-width: 10%;
-// }
-
-// .card {
-// 	background-color: #fff;
-// 	overflow: hidden;
-// 	position: relative;
-// 	border-radius: 12px;
-// }
-
-// .card * {
-// 	margin: 0;
-// }
-
-// .card__content {
-// 	padding: 1rem;
-// 	padding-top: 2.5rem;
-// 	> * + * {
-// 		margin-top: 0.5rem;
-// 	}
-// }
-
-// .card__label {
-// 	position: absolute;
-// 	left: 0;
-// 	transform: translatey(-1.7rem);
-// 	background-color: tomato;
-// 	padding-left: 1rem;
-// 	padding: 0.25rem 0.75rem 0.25rem 1rem;
-// 	color: #fff;
-// 	border-radius: 0 4px 4px 0;
-// }
-
-// .card__link {
-//   color: inherit;
-//   text-decoration: none;
-// 	&::after {
-// 		content: "";
-// 		position: absolute;
-// 		top: 0;
-// 		right: 0;
-// 		bottom: 0;
-// 		left: 0;
-// 	}
-// }
-
-// .card__cta-container {
-// 	padding-top: 1rem;
-// 	border-top: 1px solid #bebebe;
-//   margin-top: 1rem;
-// }
-
-// .card__cta {
-// 	position: relative;
-// 	width: 100%;
-//   padding: 0.5rem;
-// }
-
-
-
-
-
-
-
-
-
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-
-body{
-  background: #e8b3b3;
-  font-size: 16px;
-  font-family: 'Raleway', sans-serif;
-  background-color: #e8b3b3;
+:host ::ng-deep {
+  .p-dropdown {
+      width: 14rem;
+      font-weight: normal;
+  }
+  
+  .product-name {
+      font-size: 1.5rem;
+      font-weight: 700;
+  }
+  
+  .product-description {
+      margin: 0 0 1rem 0;
+  }
+  
+  .product-category-icon {
+      vertical-align: middle;
+      margin-right: .5rem;
+  }
+  
+  .product-category {
+      font-weight: 600;
+      vertical-align: middle;
+  }
+  
+  .product-list-item {
+      display: flex;
+      align-items: center;
+      padding: 1rem;
+      width: 100%;
+  
+      img {
+          width: 150px;
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          margin-right: 2rem;
+      }
+  
+      .product-list-detail {
+          flex: 1 1 0;
+      }
+  
+      .p-rating {
+          margin: 0 0 .5rem 0;
+      }
+  
+      .product-price {
+          font-size: 1.5rem;
+          font-weight: 600;
+          margin-bottom: .5rem;
+          align-self: flex-end;
+      }
+  
+      .product-list-action {
+          display: flex;
+          flex-direction: column;
+      }
+  
+      .p-button {
+          margin-bottom: .5rem;
+      }
+  }
+  
+  .product-grid-item {
+      margin: .5em;
+      border: 1px solid #dee2e6;
+  
+      .product-grid-item-top,
+      .product-grid-item-bottom {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+      }
+  
+      img {
+          width: 75%;
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          margin: 2rem 0;
+      }
+  
+      .product-grid-item-content {
+          text-align: center;
+      }
+  
+      .product-price {
+          font-size: 1.5rem;
+          font-weight: 600;
+      }
+  }
 }
 
-img {
-  background-color: rgba(68, 117, 159, 0.6); 
-    background-blend-mode: multiply;
+.card {
+  padding: 2rem;
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  margin-bottom: 2rem;
 }
 
-.container{
-  padding: 1rem;
-  float: left;
-}
+@media screen and (max-width: 576px) {
+:host ::ng-deep .product-list-item {
+  flex-direction: column;
+  align-items: center;
 
-.content {
-  position: relative;
-  width: 90%;
-  max-width: 400px;
-  margin: auto;
-  overflow: hidden;
-  margin-top: 10%;
-}
+  img {
+    width: 75%;
+    margin: 2rem 0;
+  }
 
-.content .content-overlay {
-  background: rgba(00,45,114,0.8);
-  position: absolute;
-  height: 99%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out 0s;
-  -moz-transition: all 0.4s ease-in-out 0s;
-  transition: all 0.4s ease-in-out 0s;
-}
+  .product-list-detail {
+    text-align: center;
+  }
 
-.content:hover .content-overlay{
-  opacity: 1;
-}
+  .product-price {
+    align-self: center;
+  }
 
-.content-image{
-  width: 100%;
-}
+  .product-list-action {
+    display: flex;
+    flex-direction: column;
+  }
 
-.content-details {
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  top: 50%;
+  .product-list-action {
+    margin-top: 2rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
 }
-
-.content-details h3{
-  color: #fff;
-  font-weight: 500;
-  letter-spacing: 0.15em;
-  margin-bottom: 0.5em;
-  text-transform: uppercase;
 }
-
-.arrow {
-  margin-left: 8px;
-}
-
-.content h3 {
-  display: inline-block;
-  position: relative;
-  transition: all 300ms ease-out;
-  will-change: transform;
-}
-
-.content:hover h3 {
-  -webkit-transform: translate3d(-1rem, 0, 0);
-          transform: translate3d(-1rem, 0, 0);
-}
-.content i {
-  position: absolute;
-  width: 1.1em;
-  right: -1.4rem;
-  opacity: 1;
-  top: 38%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  transition: all 300ms ease-out;
-  will-change: right, opacity;
-}
-
-.content:hover i {
-  opacity: 1;
-  right: -3rem;
-}
-
-
-
-/*
-.content-details h3 {
-  display: inline-block;
-  position: relative;
-  transition: all 300ms ease-out;
-  will-change: transform;
-}
-
-.content-details:hover h3 {
-  -webkit-transform: translate3d(-1rem, 0, 0);
-          transform: translate3d(-1rem, 0, 0);
-}
-.content-details i {
-  position: absolute;
-  width: 1.1em;
-  right: 0px;
-  right: 0rem;
-  opacity: 0;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  transition: all 300ms ease-out;
-  will-change: right, opacity;
-}
-.content-details i * {
-  stroke-width: 5;
-  stroke-color: transparent;
-}
-.content-details:hover i {
-  opacity: 1;
-  right: -2rem;
-}
-*/
