--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,12 +118,12 @@
                                 Dashboard
                               </a>
                             </li>
-                            <li class="nav-item" *ngIf="userRole === 'admin'">
+                            <!-- <li class="nav-item" *ngIf="userRole === 'admin'">
                               <a routerLink="/export/" routerLinkActive="active" class="nav-link text-white">
                                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"/></svg>
                                 Export
                               </a>
-                            </li>
+                            </li> -->
                             <li class="nav-item" *ngIf="userRole === 'user'">
                               <a routerLink="/my_fav/" routerLinkActive="active" class="nav-link text-white">
                                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
