--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="container-fluid" style="margin-bottom: 2px;">
     <div class="row">
         <div class="col-md-4">
