--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -73,7 +73,7 @@
               <p-toggleButton type="button" formControlName="isQustions" onLabel="I want questionnaire" offLabel="I don't want questionnaire" onIcon="pi pi-check" offIcon="pi pi-times" [style]="{'width': '23em', 'margin-bottom':'10px'}"></p-toggleButton>
               <div class="input-control" *ngIf="this.form.get('isQustions')?.value">
                 <mat-form-field class="example-full-width" style="width: 100%;">
-                    <mat-label>Leave a comment</mat-label>
+                    <mat-label>Write your Favourite</mat-label>
                     <textarea matInput placeholder="Ex. I need reading books and watch youtube..." formControlName="sentence"></textarea>
                   </mat-form-field>
               </div>
