--- a/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 <p-toast></p-toast>
-<div class="container-fluid" style="margin-bottom: 2px;">
+<div class="container-fluid" >
     <div class="row">
         <div class="col-md-4">
             <div class="card" style="background-color: #90EE90;padding-bottom: 40px;">
